	its new location in the "generate" subdirectory.

	* font/devpdf/Foundry.in: Reflect rename.

	* font/devps/generate/Makefile (symbolmap): Rename target...
	($(srcdir)/symbol.map): ...to this.

	* font/devps/devps.am (DEVPSGENFILES, EXTRA_DIST):
	* font/devps/generate/Makefile (S, EURO $(SPECIALFONTS), clean):
	* src/utils/afmtodit/afmtodit.1.man: Reflect rename and
	relocation.

2022-07-10  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/doc.am (doc/ms.ps): Add dependency on "eqn", and call
	groff with "-e" option.
	* src/utils/grog/tests/smoke-test.sh: Update expected "grog"
	output for the ms.ms document.

2022-07-09  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/doc.am (doc/ms.ps): Add dependency on "tbl".

2022-07-08  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/node.cpp (suppress_node::tprint): Add source
	file line number after its name when emitting "grohtml-info", to
	aid debugging.

2022-07-08  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/node.cpp (get_register, get_string): Reorder
	null pointer inequality comparisons; they don't need to be in a
	funny order because it's pretty hard to mistype `!=` as an
	assignment operator.  Annotate them as null pointers to ease any
	future migration to ISO C++11.  Use primitive type constructor
	instead of C-style cast operator; this seems more idiomatic.

2022-07-08  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/html/pre-html.cpp (generateImages): Flush the
	standard error stream after writing to it in a loop.

2022-07-08  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/s.tmac (RP): Recognize new optional arguments
	`no-renumber` and `no-repeat-info`, the latter as a synonym for
	the existing `no`.  The former suppresses the page number
	manipulation that normally occurs.  Drop now-unnecessary `pn 0`
	request.
	(top level, cov*first-page-init, RP, cov*print): Rename