@@ -21,6 +21,13 @@
 	* src/utils/afmtodit/afmtodit.1.man: Reflect rename and
 	relocation.
 
+	* font/devps/generate/dingbats.rmap: Rename from this...
+	* font/devps/generate/dingbats-reversed.map: ...to this.
+
+	* font/devps/devps.am (DEVPSGENFILES):
+	* font/devps/generate/Makefile (ZDR):
+	* src/utils/afmtodit/afmtodit.1.man: Reflect rename.
+
 2022-07-10  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* doc/doc.am (doc/ms.ps): Add dependency on "eqn", and call
